<resources>
    <string name="Gcm_Sender_id">951127257737</string>
    <string name="app_name">BudBuddee</string>
    <string name="title">BudBuddee</string>
    <string name="Movement_Student">BudBuddee</string>
    <string name="special_video">Special</string>
    <string name="special_help">Help</string>
    <string name="ud_distance">milles</string>
    <string name="ud_age">age/s</string>
    <string name="Maps_dialog_Title">Title: </string>
    <string name="Maps_dialog_Address">Address: </string>
    <string name="Maps_dialog_City">City: </string>
    <string name="Maps_dialog_Sex">Sex: </string>
    <string name="Maps_dialog_Undefined">undefined</string>
    <string name="Maps_dialog_HourOpen">Store: Opened</string>
    <string name="Maps_dialog_HourClose">Store: Closed</string>
    <string name="Maps_dialog_HourNo">Schedule not defined</string>
    <string name="Maps_dialog_TypeAll">Medicinal + Recreational</string>
    <string name="Maps_dialog_TypeMed">Medicinal</string>
    <string name="Maps_dialog_TypeRec">Recreational</string>
    <string name="TabChat">Chat</string>
    <string name="TabFeed">Podium</string>
    <string name="TabVideo">Videos</string>
    <string name="TabNewsFeed">News Feed</string>
    <string name="TabMore">Menu</string>
    <string name="NotifyHome">Notifications</string>
    <string name="TabCommentTitle">Post Comments</string>
    <string name="TabCommentText">Write Here your Comment</string>
    <string name="TabCommentSelect">Select Your Option to Post: </string>
    <string name="TabCommentOption1">to Wall</string>
    <string name="TabCommentOption2">to Forum</string>
    <string name="TabCommentOption3">to Article</string>
    <string name="TabCommentAction">Post Comment</string>
    <string name="TabCommentExceptionCmt">Your Comment should be more large</string>
    <string name="TabCommentExceptionSelect">You must select at least one option</string>
    <string name="TabCommentPostOk">Thanks for participating. Your comment will be published shortly</string>
    <string name="TabCommentGuest">To comment, you must first log in as a member</string>
    <string name="TabVideoException">To view your Videos or Add new Video, you must first log in as a member</string>
    <string name="TabNotiException">To view your Notifications or Add Notifications, you must first log in as a member</string>
    <string name="toolbar_menu_store">Store</string>
    <string name="toolbar_open">Open</string>
    <string name="toolbar_close">Closed</string>
    <string name="toolbar_menu_logout">Log(in/out)</string>
    <string name="toolbar_menu_refresh">Refresh</string>
    <string name="toolbar_menu_contact">BudBuddee</string>
    <string name="toolbar_menu_settings">Settings</string>
    <string name="toolbar_menu_budgames">Bud-Games</string>
    <string name="toolbar_menu_budads">Bud-Classifieds</string>
    <string name="toolbar_menu_budevents">Bud-Events</string>
    <string name="toolbar_menu_budstrains">Bud-Strains</string>
    <string name="toolbar_menu_budworld">Bud-World</string>
    <string name="toolbar_menu_stats">Podium</string>
    <string name="toolbar_menu_buddess">Buddees</string>
    <string name="toolbar_menu_timeline">TimeLine</string>
    <string name="toolbar_menu_profile">Profile</string>
    <string name="toolbar_menu_games_coming">Coming Soon...</string>
    <string name="userGuest_exception">You must login to perform this action</string>
    <string name="userGuest_exception_noprofile">This is a guest user</string>
    <string name="sendEmail_Subject">Contact from BudBuddee</string>
    <string name="sendEmail_Client">Choose User</string>
    <string name="sendEmail_NoClient">Warning: Field User empty</string>
    <string name="header_Search">Search</string>
    <string name="header_Search_layout">Searching by: </string>
    <string name="filter_dispensaries_showall">Show All</string>
    <string name="filter_dispensaries_typeMed">Medicinal</string>
    <string name="filter_dispensaries_typeRec">Recreational</string>
    <string name="filter_dispensaries_HourOpen">Open</string>
    <string name="filter_dispensaries_HourClosed">Closed</string>
    <string name="dispensary_phone">Call</string>
    <string name="dispensary_nav">Navigation</string>
    <string name="dispensary_web">Web</string>
    <string name="dispensary_rate_title">Rate &amp; Comments</string>
    <string name="dispensary_rate_send">Send</string>
    <string name="dispensary_rate_author">Rate: </string>
    <string name="dispensary_rate_your">Your Rate: </string>
    <string name="dispensary_rate_hintcmt">Write Comments here</string>
    <string name="dispensary_rate_tab1">Info</string>
    <string name="dispensary_rate_tab2">Menu</string>
    <string name="dispensary_rate_tab3">Review</string>
    <string name="dispensary_CommentPostOk">Thanks for participating. Your comment will be published shortly</string>
    <string name="dispensary_CommentGuest">To comment, you must first log in as a member</string>
    <string name="dispensary_Exception">Your Comment should be more large</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_new">New!</string>
    <string name="notifications_trash">Trash</string>
    <string name="innohawk_dialog_cancel">Cancel</string>
    <string name="innohawk_dialog_ok">Accept</string>
    <string name="innohawk_dialog_title_remove">Atention</string>
    <string name="innohawk_dialog_text_remove">Do you like remove this item?</string>
    <string name="innohawk_dialog_field_remove">Not show more this alert</string>
    <string name="innohawk_dialog_notdata">Not Data found</string>
    <string name="innohawk_filter_searchbar"> Search position by Address or zipcode</string>
    <string name="innohawk_filter_ratio">Ratio</string>
    <string name="innohawk_filter_profiles">Profiles</string>
    <string name="innohawk_filter_profilesAges">Ages</string>
    <string name="innohawk_filter_profilesGender">Gender</string>
    <string name="innohawk_filter_profilesMale">Male</string>
    <string name="innohawk_filter_profilesFemale">Female</string>
    <string name="innohawk_filter_profilesGay">InterSex</string>
    <string name="innohawk_filter_profilesStatus">Status</string>
    <string name="innohawk_filter_profilesSingle">Single</string>
    <string name="innohawk_filter_profilesCouple">Couple</string>
    <string name="innohawk_filter_dispensaries">Dispensaries</string>
    <string name="innohawk_filter_dispensariesTypes">Types</string>
    <string name="innohawk_filter_dispensariesCat">Categories</string>
    <string name="innohawk_filter_dispensariesList">Listing</string>
    <string name="innohawk_filter_dispensariesHour">Schedule</string>
    <string name="innohawk_filter_connects">Connects</string>
    <string name="innohawk_filter_cancel">Cancel</string>
    <string name="innohawk_filter_apply">Apply</string>
    <string name="google_location_text">Location</string>
    <string name="google_location_textAccept">Accept</string>
    <string name="google_location_textDecline">Decline</string>
    <string name="google_location_textShare">Do you agree to share your location?</string>
    <string name="skip_button">SKIP</string>
    <string name="done_button">DONE</string>
    <string name="Intro_title_1">-</string>
    <string name="Intro_text_1">-</string>
    <string name="Intro_title_2">-</string>
    <string name="Intro_text_2">-</string>
    <string name="Intro_title_3">-</string>
    <string name="Intro_text_3">-</string>
    <string name="Main_login">Login</string>
    <string name="Main_Forgot">Forgot Your Password?</string>
    <string name="Main_Account">Don\'t have an account with us?</string>
    <string name="Main_register">Register Now</string>
    <string name="Main_menu_intro">Introduction</string>
    <string name="Main_fb_error">Login attempt failed</string>
    <string name="Main_fb_cancel">Login attempt canceled</string>
    <string name="Main_fb_error_login">The email are ready exist</string>
    <string name="Main_fb_toast_validate">Validated User</string>
    <string name="Main_errorForgot">You must fill in the username or email</string>
    <string name="Main_errorForgotConnect">There was a connection error</string>
    <string name="Main_ForgotConnect">An email has been sent with the steps to follow. Please check that it is not in "junk" mail. Thank you</string>
    <string name="Main_videos">Videos</string>
    <string name="Main_groups">Groups</string>
    <string name="Main_events">Events</string>
    <string name="Main_blogs">Blogs</string>
    <string name="cont_signup">Continue</string>
    <string name="nickname_signup">NickName</string>
    <string name="first_signup">First Name</string>
    <string name="last_signup">Last Name</string>
    <string name="email_signup">E-mail</string>
    <string name="pass_signup">Password</string>
    <string name="confirmpass_signup">Confirm Password</string>
    <string name="fullname_signup">Full Name</string>
    <string name="phone_signup">Phone</string>
    <string name="birth_signup">BirthDay  </string>
    <string name="select_signup">Select</string>
    <string name="terms_signup">I Accept Terms</string>
    <string name="create_signup">Create and Account</string>
    <string name="creating_signup">Creating account...</string>
    <string name="congratulations_signup">Congratulations, you have successfully registered.</string>
    <string name="usernameExist_signup">Error with the username. It already exists.</string>
    <string name="emailExist_signup">Error with the email. It already exists.</string>
    <string name="phoneExist_signup">Error with the phone. It already exists.</string>
    <string name="failed_signup">Failure to register. Try again.</string>
    <string name="error_signup">Registration failed. Reviews all fields.</string>
    <string name="terms_accept_signup">You have to accept the terms.</string>
    <string name="valid_username_signup">Please, enter a valid name</string>
    <string name="valid_email_signup">Please, enter a valid email address</string>
    <string name="valid_phone_signup">Please, enter a valid phone number</string>
    <string name="valid_fullname_signup">At least 3 characters</string>
    <string name="valid_birthday_signup">Please, enter a valid data</string>
    <string name="valid_pass_signup">between 4-10 alphanumeric characters</string>
    <string name="valid_confirmpass_signup">Passwords do not match</string>
    <string name="valid_phone_or_email">Please, enter a email address or phone number</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="Main_login_socials"> -Or Login with Facebook- </string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="about_help">About Us</string>
    <string name="terms_help">Terms of Use</string>
    <string name="privacity_help">Privacity</string>
    <string name="error">Error</string>
    <string name="login_username">Username or eMail:</string>
    <string name="login_password">Password:</string>
    <string name="mail_compose_recipient">Recipient</string>
    <string name="mail_compose_subject">Subject</string>
    <string name="mail_compose_text">Text</string>
    <string name="mail_compose_options_me">Send copy to me</string>
    <string name="mail_compose_options_recipient">Send copy to recipient</string>
    <string name="mail_compose_options_both">Send copy to both</string>
</resources>