<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45000000">

    <RelativeLayout
        android:id="@+id/rl_back"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/innohawk_border_dialog_alert"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:text="@string/error"
            android:textColor="#000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_border"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/txt_error"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="3dp" />

        <TextView
            android:id="@+id/txt_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/innohawk_dialog_notdata"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14dp"
            android:layout_margin="5dp"
            android:layout_below="@+id/img_border"
            android:layout_above="@+id/btn_yes" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/innohawk_borderbutton_main"
            android:clickable="true"
            android:gravity="center|center_horizontal"
            android:text="@string/innohawk_dialog_ok"
            android:textColor="#000"
            android:textSize="10dp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>